tests/e2e/string_templates_path_error5.error
Error: syntax error in story at line 2, column 8

2|    c = "{ 3 + b }"
             ^

E0103: `+` between `int` and `List[int]` is not supported.
